src/style/modules.scss
button,
button:hover,
button:active,
button:checked,
button:focus {
    all: unset;
}

window.Bar {
    background: transparent;

    .bar-box {
        background-color: rgba(red(#1a2433), green(#1a2433), blue(#1a2433), 0.4);
        border-radius: 0;
        margin: 0;
    }

    .bar-section {
        margin: 0.3em 0em 0.3em 0em;
    }

    .bar-item {
        background-color: rgba(red(#1a2433), green(#1a2433), blue(#1a2433), 1);
        border-radius: 0.2em;
        margin: 0em 0.2em 0em 0.2em;
        padding: 0.2em 0.6em 0.2em 0.6em;
        color: #a39e80;
        font-family: "JetBrainsMono Nerd Font Propo";
        font-size: 1.2em;
        font-weight: bold;
        background-color: #243448;
        box-shadow:
            inset 0 -0.2em 0 #16212b,
            0 0.2em 0.3em rgba(0, 0, 0, 0.5),
            inset 0 0.1em 0 #3f5279;
    }

    .poller-item {
        margin: 0em 0.1em 0em 0.1em;
    }

    .cpu-poller {
        color: #a8cbdc;
    }

    .gpu-poller {
        color: #a9dbbc;
    }

    .ram-poller {
        color: #D67E70;
    }

    .bar-tray {
        padding: 0em 0.3em 0em 0.3em
    }

    .tray-item {
        margin: 0em 0.2em 0em 0.2em
    }

    .kblayout {
        padding: (
            nth(0.2em 0.6em 0.2em 0.6em, 1) + 0.1em
            nth(0.2em 0.6em 0.2em 0.6em, 2)
            nth(0.2em 0.6em 0.2em 0.6em, 3)
            nth(0.2em 0.6em 0.2em 0.6em, 4)
        );
    }

    .ws-tracker {
        margin: 0em 0.1em 0em 0.1em;
        padding: 0em 0.2em 0em 0.2em;
    }

    .ws-active {
        background-color: #1a2739;
        box-shadow:
            inset 0 -0.2em 0 #111c24,
            0 0.2em 0.3em rgba(0, 0, 0, 0.5),
            inset 0 0.1em 0 #374862;
    }

    .ws-inactive {
        background-color: #243448;
        box-shadow:
            inset 0 -0.2em 0 #16212b,
            0 0.2em 0.3em rgba(0, 0, 0, 0.5),
            inset 0 0.1em 0 #3f5279;
    }

    .ws-focused {
        color: #D55A7A; 
    }

    .ws-unfocused {
        color: #7AA8F7
    }

    .ws-monitor-n {
        color: #a4f1c2
    }

    .task {
        margin: 0 0.1em 0 0.1em;
    }

    .taskbox {
        background-color: rgba(51, 46, 27, 0.6);
        border-radius: 0.2em;
        margin-right: 0.1em;
    }

    .task-unfocused {
        background-color: #3b4f63;
        box-shadow:
            inset 0 -0.2em 0 #283642,
            0 0.2em 0.3em rgba(0, 0, 0, 0.5),
            inset 0 0.1em 0 #5e7c94;
        color: #f2e5d5;
    }

    .task-focused {
        background-color: #9c4f2f;
        box-shadow:
            inset 0 -0.2em 0 #5c2f1c,
            0 0.2em 0.3em rgba(0, 0, 0, 0.5),
            inset 0 0.1em 0 #d47a4d;
        color: #f2e5d5;
    }

    .task-ws-n {
        color: #2ff4f4;
    }


    scrolledwindow, * {
        all: unset;
    }
}


window.calendar {
    .calendar-menu-widget {
        background-color: rgba(red(#1a2433), green(#1a2433), blue(#1a2433), 1);
        border-radius: 0.2em;
        color: #a39e80;

        &:selected {
            box-shadow:
                inset 0 -0.5em 0 0 #D55A7A,
                inset -0.4em -0.3em 0 0 #1a2433,
                inset 0.4em 0 0 0.01em #1a2433;
            color: #D55A7A;
            border-radius: 0em;
        }

        &.header {
            color: #A8DCA8;
            border-radius: 0.2em;
            box-shadow:
                inset 0 1px 1px #0d121a,
                inset 0 -1px 1px #22303f;
        }

        &.button {
            color: #49c53c;
        }

        &:hover {
            color: #a13cc5;
        }

        &.highlight {
            color: #b682c1;
        }

        &:indeterminate {
            color: transparentize(#a39e80, 0.65);
        }

        font-size: 1.1em;
        padding: 0.35em;
    }

    .calendar-container-box {
        margin-right: 1.4em;
    }
}

